Finally got the damn information on the Index.

--- a/Aphrodite/Aphrodite.Front/Aphrodite.Front.csproj
+++ b/Aphrodite/Aphrodite.Front/Aphrodite.Front.csproj
@@ -166,6 +166,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201411181242386_NameGenderBirthday.cs" />
+    <Compile Include="Migrations\201411181242386_NameGenderBirthday.Designer.cs">
+      <DependentUpon>201411181242386_NameGenderBirthday.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -194,7 +198,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -229,6 +235,11 @@
       <Project>{08bca3f7-b6db-4261-84af-c9b345ed413a}</Project>
       <Name>Aphrodite.Business</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201411181242386_NameGenderBirthday.resx">
+      <DependentUpon>201411181242386_NameGenderBirthday.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
