--- a/Aphrodite/Aphrodite.Front/Aphrodite.Front.csproj
+++ b/Aphrodite/Aphrodite.Front/Aphrodite.Front.csproj
@@ -232,6 +232,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Upload\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
